feat: presign poc
